--- a/html/index.html
+++ b/html/index.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-shop mobiteli</title>
+    <title>Arhiva pjesma</title>
 <!--link rel="stylesheet" href="../css/still.css"-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
 </head>
-
 
 <body>
     <div class="w3-container w3-red">
         <nav class="navigacija">
             <div class="w3-bar w3-black">
                  <a href="index.html" class="w3-bar-item w3-button">Početna stranica</a></li>
-                 <a href="sve_ponude.html" class="w3-bar-item w3-button">Sve ponude</a></li>
-                 <a href="kontakt.html" class="w3-bar-item w3-button">Kontakt</a></li>
+                 <a href="sve_ponude.html" class="w3-bar-item w3-button">Popis pjesama</a></li>
                  <a href="registracija.html" class="w3-bar-item w3-button">Registracija</a></li>
             </div>
         </nav>
     </div>
 
-    <h1>Webshop - mobiteli</h1>
+    <h1>Arhiva pjesma</h1>
     <div class="w3-container">
-        <h1 class="w3-center w3-animate-top">Dobrodošli u web-shop!</h1>
+        <h1 class="w3-center w3-animate-top">Dobrodošli!</h1>
       </div>
 
       <div class="w3-light-grey">
