--- a/html/registracija.html
+++ b/html/registracija.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-shop mobiteli</title>
+    <title>Arhiva pjesma</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 </head>
 
@@ -12,8 +12,7 @@
         <nav class="navigacija" id="navigacija">
             <div class="w3-bar w3-black">
                 <a href="index.html" class="w3-bar-item w3-button">Početna stranica</a>
-                <a href="sve_ponude.html" class="w3-bar-item w3-button">Sve ponude</a>
-                <a href="kontakt.html" class="w3-bar-item w3-button">Kontakt</a>
+                <a href="sve_ponude.html" class="w3-bar-item w3-button">Popis pjesama</a>
                 <a href="registracija.html" class="w3-bar-item w3-button">Registracija</a></li>
             </div>               
         </nav>
