--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
         <nav class="navigacija">
             <div class="w3-bar w3-black">
                  <a href="index.html" class="w3-bar-item w3-button">Početna stranica</a></li>
-                 <a href="sve_ponude.html" class="w3-bar-item w3-button">Popis pjesama</a></li>
+                 <a href="../php/sve_ponude.php" class="w3-bar-item w3-button">Popis pjesama</a></li>
                  <a href="registracija.html" class="w3-bar-item w3-button">Registracija</a></li>
             </div>
         </nav>
