--- a/html/pocetna.html
+++ b/html/pocetna.html
@@ -3,48 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arhiva pjesma</title>
-<!--link rel="stylesheet" href="../css/still.css"-->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Arhiva pjesama</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
     <div class="w3-container w3-red">
         <nav class="navigacija">
             <div class="w3-bar w3-black">
-                 <a href="index.html" class="w3-bar-item w3-button">Početna stranica</a></li>
-                 <a href="../php/sve_ponude.php" class="w3-bar-item w3-button">Popis pjesama</a></li>
-                 <a href="registracija.html" class="w3-bar-item w3-button">Registracija</a></li>
+                <a href="pocetna.html" class="w3-bar-item w3-button">Početna stranica</a>
+                <a href="popis.html" class="w3-bar-item w3-button" onclick="displaySongs()">Popis pjesama</a>
             </div>
         </nav>
     </div>
 
-    <h1>Arhiva pjesma</h1>
+    <h1>Arhiva pjesama</h1>
     <div class="w3-container">
         <h1 class="w3-center w3-animate-top">Dobrodošli!</h1>
-      </div>
+    </div>
 
-      <div class="w3-light-grey">
-  <div id="myBar" class="w3-container w3-red" style="height:24px;width:1%"></div>
-</div>
+    <div class="w3-light-grey">
+        <div id="myBar" class="w3-container w3-red" style="height:24px;width:1%"></div>
+    </div>
 
-<button class="w3-button w3-black" onclick="move()">Click Me</button>
+    <button class="w3-button w3-black" onclick="displaySongs()">Prikaži pjesme</button>
 
-<script>
-function move() {
-  var elem = document.getElementById("myBar");
-  var width = 1;
-  var id = setInterval(frame, 10);
-  function frame() {
-    if (width >= 100) {
-      clearInterval(id);
-    } else {
-      width++;
-      elem.style.width = width + '%';
-    }
-  }
-}
-</script>
+    <div id="songList" class="w3-container">
+        
+    </div>
 
+    <script>
+        function displaySongs() {
+            var songListContainer = document.getElementById("songList");
+
+            //AJAX zahtjev za primanje podataka (pocetna.php)
+            var xhr = new XMLHttpRequest();
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState == 4 && xhr.status == 200) {
+                    var songs = JSON.parse(xhr.responseText);
+                    var html = "<table class='w3-table-all'>";
+                    html += "<tr class='w3-red'><th>Link</th><th>Ime</th><th>Izvođač</th><th>Žanr</th></tr>";
+                    songs.forEach(function (song) {
+                        html += "<tr>";
+                        html += "<td>" + song.link + "</td>";
+                        html += "<td>" + song.ime + "</td>";
+                        html += "<td>" + song.izvodac + "</td>";
+                        html += "<td>" + song.zanr + "</td>";
+                        html += "</tr>";
+                    });
+                    html += "</table>";
+                    songListContainer.innerHTML = html;
+                }
+            };
+            xhr.open("GET", "pocetna.php", true);
+            xhr.send();
+        }
+    </script>
 </body>
 </html>
